# dset_3FTx

./: pyproject.toml
data/blast_out/: 101Chmy_5_.json  103Chmy_4_.json  105Nana_c3.json  107Pste_6_.json  109Vako6_V.json  111Anca_6_.json  113Povi_6_.json  115Alsi_9_.json  117Gaga_8_.json  119Vako10_.json  11Hosa_2_H.json  121Chmy_12.json  123Xetr_9_.json  125Hosa_1_.json  127Alsi_1_.json  129Gaga_1_.json  131Chmy_1_.json  133Vako1_V.json  135Anca_1_.json  137Povi_1_.json  139Pybi_3_.json  13Hosa_13_.json  141Nana_c3.json  143Pste_2_.json  145Phci_2_.json  147Oran3_O.json  149Xetr_2_.json  151Xetr4_X.json  153Xetr_7_.json  155Xetr_6_.json  157Xetr_1_.json  159Xetr_3_.json  15Phci_8_P.json  161Xetr_8_.json  163Xetr_5_.json  165Vako_dn.json  167Hosa_3_.json  169Gaga_2_.json  171Alsi_2_.json  173Oran2_O.json  (+1250 more)
data/bmul_manual_ivan/: Bungarus_genomic.fasta  Bungarus_genomic.fasta.fai  all_new.fasta  all_new.fasta.fai  missed_cobra.fasta  missed_cobra.fasta.fai  new_mature.fasta.fai
data/clans/: 10K_run_2D_data.txt  command_to_run.txt  description.txt
dset_3ftx/: 10_tolip.ipynb  11_pdb_compare.ipynb  12_rostspace.ipynb  3FTx_new.ipynb  4_add_bmul_manual.ipynb  5_create_subgroups.ipynb  6_ete3_modify_newick.ipynb  7_create_clams.ipynb  7_create_clans.ipynb  8_prune_tree.ipynb  9_multimer_prediction.ipynb  add_bmul_manual.ipynb  add_legend_to_clans.py  blastp.ipynb  color_pdb.py  coloring_itol.ipynb  create_3FTx.ipynb  dan_review.ipynb  dset_3FTx.py  idmapping.py  ncbi_helper.py  old.py  pdb_get_structures.py  run_foldseek.py  uniprot.py  uniprot_helper.py
(+2090 files in other folders)
